[0.2.0.0 - Alpha   xx/Mar/2008]
+ added filter details form
+ fixed bug with non-functional favorite filter links

[0.1.9.0 - Alpha   24/Feb/2008]
+ added automatic graph restart schedule (currently only for 04:00 AM :) - don't ask why)
+ added capability to construct graphs from XML files
+ added extension filters for opening dialogs
+ added option to display filter name instead of filename of a source/sink filter
+ added link to filters form into the favorites form
+ added DEL keyboard shortcut to delete filters and groups
+ non-existing filters are marked with a red "(!)"

[0.1.8.0 - Alpha   17/Feb/2008]
+ favorite filters and managing form now work
+ DMO filters are displayed in green color
+ KSProxy filters are displayed in orange color

[0.1.7.0 - Alpha   14/Feb/2008]
+ .grf extension is now added automatically when saving graph
+ "Render Media File" behavior changed to reset&clear exiting graph
+ added "Add Media File" that has the original "Render Media File" functionality
+ rendered files are now loaded into the recently used list
+ added shortcuts to Video and Audio renderers
+ fixed media type parsing
+ Windows XP fixes - at startup window does not flicker and move
+ warning sound is played when trying to remove filters from a running graph
+ added selection box to select multiple filters
+ added "Ctrl+D" shortcut to insert another instance(s) of currently selected filter(s)
+ added Increase/Decrease zoom level shortcuts
+ added favorite filters with subcategories (not ready)
+ added form to manage favorite filters (not ready)

[0.1.6.0 - Alpha   09/Feb/2008]
+ added scrollbars when graph is larger than view area
+ added zoom (50%, 75%, 100%, 150%, 200%)
+ faster graph rendering
+ screenshot will contain whole graph even if it is not completely visible in the view area
+ added IFileSinkFilter handling page
+ added shortcuts to create File Writer

[0.1.5.1 - Alpha   02/Feb/2008]
+ added most recently used list (with Clear button)