@@ -643,7 +643,7 @@ BEGIN
     LTEXT           "00:00:00 / 00:00:00",IDC_STATIC_TIME,308,3,66,8
 END
 
-IDD_DIALOG_FILTERDETAILS DIALOGEX 0, 0, 260, 218
+IDD_DIALOG_FILTERDETAILS DIALOGEX 0, 0, 272, 248
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
@@ -670,9 +670,9 @@ BEGIN
     IDD_DIALOG_FILTERDETAILS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 253
+        RIGHTMARGIN, 265
         TOPMARGIN, 7
-        BOTTOMMARGIN, 211
+        BOTTOMMARGIN, 241
     END
 END
 #endif    // APSTUDIO_INVOKED
